fix: change z-index for modalWindow

--- a/react-components/src/components/Cards/ModalWindow/index.scss
+++ b/react-components/src/components/Cards/ModalWindow/index.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   display: flex;
+  z-index: 1;
 
   &__wrapper {
     position: relative;
@@ -31,48 +32,48 @@
 }
 
 .card {
-    max-width: 500px;
-    min-height: 348px;
-    background-color: rgba(23, 31, 39, 0.9);
-    color: bisque;
-    padding: 20px;
-    border: thick double rgba(124, 189, 255, 0.641);
-    border-radius: 10px;
-    cursor: pointer;
-  
-    &__header {
-      display: flex;
-      gap: 20px;
-      margin-bottom: 10px;
-    }
-  
-    &__title {
-      font-size: 25px;
-      margin-bottom: 10px;
-      font-family: 'GlamySunriseRegular';
-      letter-spacing: 2px;
-      color: rgb(124, 189, 255);
-    }
-  
-    &__img {
-      object-fit: cover;
-    }
-  
-    &__span {
-      font-family: 'GlamySunriseRegular';
-      letter-spacing: 2px;
-      color: rgba(91, 135, 178, 0.8);
-      font-size: 18px;
-    }
-  
-    &__description {
-      text-align: justify;
-    }
+  max-width: 500px;
+  min-height: 348px;
+  background-color: rgba(23, 31, 39, 0.9);
+  color: bisque;
+  padding: 20px;
+  border: thick double rgba(124, 189, 255, 0.641);
+  border-radius: 10px;
+  cursor: pointer;
+
+  &__header {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 10px;
   }
-  
-  @media screen and (max-width: 35rem) {
-    .card__header {
-      flex-direction: column;
-      align-items: center;
-    }
+
+  &__title {
+    font-size: 25px;
+    margin-bottom: 10px;
+    font-family: 'GlamySunriseRegular';
+    letter-spacing: 2px;
+    color: rgb(124, 189, 255);
   }
+
+  &__img {
+    object-fit: cover;
+  }
+
+  &__span {
+    font-family: 'GlamySunriseRegular';
+    letter-spacing: 2px;
+    color: rgba(91, 135, 178, 0.8);
+    font-size: 18px;
+  }
+
+  &__description {
+    text-align: justify;
+  }
+}
+
+@media screen and (max-width: 35rem) {
+  .card__header {
+    flex-direction: column;
+    align-items: center;
+  }
+}
